# NekoSpice

./: .gitignore  Cargo.toml  PROJECT_STRUCTURE.md  README.md  TREE.md
crates/nsp-app/: Cargo.toml  README.md
crates/nsp-app/docs/: context-menu-tool-palette.md  crate-structure.md  schematic-bottom-dock.md  simulation-profile-editor.md  ui-improvements.md
crates/nsp-app/src/: app.rs  document.rs  document_ops.rs  lib.rs  library.rs  main.rs  placement_config.rs  report_summary.rs  simulation.rs  simulation_run_loader.rs  simulation_tests.rs  test_support.rs  viewport.rs  waveform_summary.rs
crates/nsp-app/src/app/: app_ops.rs  app_sim_sync.rs  canvas_panel.rs  diagnostics_panel.rs  file_dialog.rs  global_shortcuts.rs  history.rs  localization.rs  localization_en_impl.rs  localization_zh_impl.rs  navigation.rs  navigation_panel.rs  panels.rs  placement.rs  preferences_persistence.rs  project_panel.rs  runtime.rs  status_strip.rs  theme.rs  tool_palette.rs  widgets.rs
crates/nsp-app/src/app/home/: command_center.rs  mod.rs  quick_actions.rs  sections.rs  templates.rs  widgets.rs
crates/nsp-app/src/canvas/: README.md  colors.rs  hover.rs  scene_renderer.rs  scene_renderer_annotations.rs  scene_renderer_wires.rs  transforms.rs
crates/nsp-app/src/document_tests/: editing.rs  items.rs  mod.rs  placement.rs  simulation.rs
crates/nsp-cli/: Cargo.toml  README.md
crates/nsp-cli/docs/: file-split.md
crates/nsp-cli/src/: cli_run.rs  cli_schema.rs  cli_verify.rs  main.rs  schema_edit.rs
crates/osl-app/: Cargo.toml  README.md
crates/osl-app/docs/: crate-structure.md  ui-improvements.md
crates/osl-app/src/: app.rs  canvas.rs  document.rs  document_ops.rs  document_tests.rs  lib.rs  library.rs  main.rs  placement_config.rs  report_summary.rs  simulation.rs  simulation_run_loader.rs  simulation_tests.rs  test_support.rs  viewport.rs  waveform_summary.rs
crates/osl-app/src/app/: README.md  app_ops.rs  app_sim_sync.rs  canvas_context_menu.rs  canvas_panel.rs  canvas_shortcuts.rs  center_workspace.rs  clipboard.rs  context_menu.rs  diagnostics_panel.rs  file_dialog.rs  global_shortcuts.rs  history.rs  home_command_center.rs  home_dashboard.rs  home_insights_panel.rs  home_project_context.rs  home_sections.rs  home_widgets.rs  library_data.rs  library_inspector.rs  library_model_browser.rs  library_model_validation.rs  library_preview.rs  library_sections.rs  library_widgets.rs  library_workspace.rs  locale.rs  localization.rs  localization_en_impl.rs  localization_zh_impl.rs  navigation.rs  navigation_panel.rs  optimization_workspace.rs  optimization_workspace_sections.rs  optimization_workspace_state.rs  optimization_workspace_widgets.rs  panels.rs  placement.rs  preferences.rs  (+50 more)
crates/osl-app/src/canvas/: README.md  colors.rs  hover.rs  primitives.rs  scene_renderer.rs  scene_renderer_annotations.rs  scene_renderer_wires.rs  transforms.rs
crates/osl-app/src/document_tests/: editing.rs  items.rs  mod.rs  placement.rs  simulation.rs
crates/osl-cli/: Cargo.toml  README.md
crates/osl-cli/docs/: file-split.md
crates/osl-cli/src/: cli_kicad.rs  cli_verify.rs  kicad_edit.rs  main.rs
docs/: README.md  TREE.md  (+4 more)
(+457 files in other folders)
