[workspace]
members = [
    "crates/osl-core",
    "crates/osl-kicad",
    "crates/osl-model",
    "crates/osl-netlist",
    "crates/osl-render",
    "crates/osl-report",
    "crates/osl-waveform",
    "crates/osl-sim",
    "crates/osl-cli",
    "crates/osl-app",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/nekospice"
