[workspace]
members = [
    "crates/nsp-core",
    "crates/nsp-schema",
    "crates/nsp-model",
    "crates/nsp-netlist",
    "crates/nsp-render",
    "crates/nsp-report",
    "crates/nsp-waveform",
    "crates/nsp-sim",
    "crates/nsp-cli",
    "crates/nsp-app",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NekoRain404/NekoSpice"
