[package]
name = "osl-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "nekospice"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.34.3", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"] }
osl-core = { path = "../osl-core" }
osl-kicad = { path = "../osl-kicad" }
osl-report = { path = "../osl-report" }
osl-sim = { path = "../osl-sim" }
osl-waveform = { path = "../osl-waveform" }
rfd = "0.15"
