[package]
name = "osl-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "osl"
path = "src/main.rs"

[dependencies]
osl-core = { path = "../osl-core" }
osl-kicad = { path = "../osl-kicad" }
osl-model = { path = "../osl-model" }
osl-netlist = { path = "../osl-netlist" }
osl-render = { path = "../osl-render" }
osl-sim = { path = "../osl-sim" }
osl-waveform = { path = "../osl-waveform" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
